# -c-ext

./: .gitignore  CLAUDE.md  MODULE_MANIFEST.yaml  README.md  browser_monitor.py  code_extract_macos_config.json  install_macos_app.sh  macos_menubar_app.py  pyproject.toml
code_extract/: __init__.py  cli.py  models.py  pipeline.py
code_extract/ai/: __init__.py  rate_limiter.py  service.py  token_utils.py  tool_bridge.py  tool_enhancement.py  tool_intelligence.py  tool_migration.py  tool_orchestration.py  tool_registry.py  tool_system.py  tools.py
code_extract/analysis/: __init__.py  architecture.py  boilerplate.py  catalog.py  dead_code.py  dependency_graph.py  diff.py  docs.py  graph_models.py  health.py  migration.py  pattern_cloner.py  remix.py  tour.py
code_extract/cleaner/: __init__.py  import_cleaner.py  metadata_stripper.py  reference_sanitizer.py
code_extract/exporter/: __init__.py  folder_exporter.py  manifest_generator.py  package_exporter.py  readme_generator.py
code_extract/extractor/: __init__.py  base.py  dart_extractor.py  html_extractor.py  js_extractor.py  python_extractor.py  sql_extractor.py  treesitter_extractor.py
code_extract/formatter/: __init__.py  base.py  (+5 more)
tests/: test_ai.py  test_ai_agent.py  test_ai_config_persistence.py  test_analysis.py  test_html_scanner.py  test_pipeline.py  test_rate_limiter.py  test_remix.py  test_scanner.py  test_structured_analysis.py  test_token_utils.py  test_tool_bridge.py  test_tool_system.py  test_tool_system_integration.py  test_treesitter_scanner.py  test_web_analysis_api.py  test_web_api.py
(+35 files in other folders)
